Got the stand alone task Java Fx task to work